--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,15 +17,18 @@
     <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>Tech Blog</h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
+      <div class="nav-scroller py-1 mb-2">
+        <nav class="nav d-flex justify-content-between">
+          <!-- Conditionally render login or logout links --> 
+          <a class="p-2 text-muted" href="/">Home</a>
+          <a class="p-2 text-muted" href="/dashboard">Dashboard</a>
+          {{#if logged_in}}
+          <button class="no-button" id="logout">logout</button>
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
+        </nav>
+      </div>
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
@@ -35,10 +38,11 @@
       
     </footer>
   </div>
-</body> 
-<script 
+  <script 
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
-  crossorigin="anonymous">
-</script>
+  crossorigin="anonymous"></script> 
+  <script src="/js/logout.js"></script>
+</body> 
+
 </html>
