--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -1,10 +1,16 @@
 <div id="single-post" class="text-center card jumbotron p-3 p-md-5 bg-success rounded">
   <h2 class="page-header display-2"id="title">{{title}}</h2>
   <p class = "card-body display-6" id="desc">{{post_contents}}</p>
-  <p>Created by {{user.name}} on {{format_date post.date_created}}</p>  
-  {{#each comments as |comment|}} 
-    <p>{{comment.contents}}</p>
-  {{/each}}
+  <p>Created by {{user.name}} on {{format_date date_created}}</p>  
+  {{#if comments}}
+    {{#each comments as |comment|}} 
+    <div class="container bg primary">
+      <a>{{comment.comment_text}}</a>
+      <p>Comment by {{comment.user.name}} on {{format_date date_created}}</p>
+    </div>
+    {{/each}} 
+  {{/if}}
+
   <!-- Add a new comment -->
   <form class="add-comment" action="/api/comments"  method="POST" data-postid={{id}}</form>
     <div class="form-group">
