--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
         <div class="col-md-5"> 
             <div class="col-8">
                 <h2>
-                    <a class="text-uppercase" href="/post/{{Post.id}}">{{Post.title}}</a>
+                    <a class="text-uppercase" href="/posts/{{Post.id}}">{{Post.title}}</a>
                 </h2>
             </div> 
 
